<resources>
    <string name="app_name">service_app</string>
    <string name="sign_up_button">sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_user">Logout</string>
    <string name="username_input">Username</string>
    <string name="email_input">Email</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_username">Username</string>
    <string name="password_input">Password</string>
    <string name="signup_password">Password</string>
    <string name="listing_title">Title</string>
    <string name="listing_date">Date</string>
    <string name="listing_time">Time</string>
    <string name="listing_price">Price</string>
    <string name="listing_category">Category</string>
    <string name="listing_location">Location</string>
    <string name="listing_contact_info">Contact</string>
    <string name="listing_description">Description</string>
    <string name="create_listing">Create Listing</string>
    <string name="title_activity_listing_details_view">listing_details_view</string>
    <string name="listingName">Listing Name</string>
    <string name="respondToListing">Respond</string>
    <string name="providerName">Provider Name</string>
    <string name="payoffAmount">Payoff Amount:</string>
    <string name="payoffPrice">$$$$$</string>
    <string name="listingDate">Date</string>
    <string name="dueDate">01/01/2018</string>
    <string name="listingTime">Time</string>
    <string name="dueTime">12:00PM - 12:01PM</string>
    <string name="listingAddress">Address</string>
    <string name="dueAddress">123 Anywhere Street, Anywhere USA, 12345</string>
    <string name="listingDescription">Description</string>
    <string name="dueDescription">This is a basic description for a listing I am making is 2 lines (hopefully) to see how well it looks.</string>
    <string name="selectImage">Select Listing Image</string>
    <string-array name="sorting_categories">
        <item>Date</item>
        <item>Price - Low to High</item>
        <item>Price - High to Low</item>
        <item>Relevance</item>
    </string-array>

</resources>