<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group12.service_app.listing_details_view">

    <ImageView
        android:id="@+id/ListerProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listingNameLabel"
        app:srcCompat="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/listingNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/listingName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/respondToListingButton"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/respondToListing"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/ListerProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/listingNameLabel" />

    <TextView
        android:id="@+id/providerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/providerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ListerProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/respondToListingButton" />

    <ImageView
        android:id="@+id/ratingStar1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ListerProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/providerNameLabel"
        app:srcCompat="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/payoffAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/payoffAmount"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListerProfileImage" />

    <TextView
        android:id="@+id/payoffPriceLabel"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/payoffPrice"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/payoffAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/ListerProfileImage" />

    <TextView
        android:id="@+id/listingDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/listingDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payoffAmountLabel" />

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="102dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/dueDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listingDateLabel" />

    <TextView
        android:id="@+id/listingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/listingTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/dueDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/payoffAmountLabel" />

    <TextView
        android:id="@+id/dueTimeLabel"
        android:layout_width="158dp"
        android:layout_height="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dueTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dueDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/listingTimeLabel" />

    <TextView
        android:id="@+id/listingAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/listingAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueDateLabel" />

    <TextView
        android:id="@+id/dueAddressLabel"
        android:layout_width="318dp"
        android:layout_height="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/dueAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listingAddressLabel" />

    <TextView
        android:id="@+id/lisitngDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/listingDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueAddressLabel" />

    <TextView
        android:id="@+id/dueDescriptionLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/dueDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lisitngDescriptionLabel"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
